--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -19,6 +19,10 @@
 	rel="stylesheet" type="text/css" />
 <!-- TABLE STYLES-->
 <link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
+<link
+	th:href="@{https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css}"
+	rel="stylesheet" />
+
 </head>
 <body>
 	<div th:include="adminNav :: head-and-side"></div>
@@ -36,6 +40,7 @@
 							change your own role.)</small>
 					</h2>
 					<br />
+					<input id="currentUserRole" type="hidden" th:value="${#authentication.principal.role.userRole}" />
 				</div>
 			</div>
 			<div class="row">
@@ -49,61 +54,21 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading">User Details</div>
 						<div class="panel-body">
-							<div class="table-responsive">
+							<div class="table-responsive" id="tabledata">
 								<table class="table table-striped table-bordered table-hover"
-									id="dataTables-example">
+									id="sample">
 									<thead>
 										<tr>
-											<th>User Id</th>
-											<th>User name</th>
-											<th>User address</th>
-											<th>Mobile No</th>
-											<th>Registered on</th>
-											<th>Role</th>
-											<th>Is approved?</th>
-											<th>Is Active?</th>
+											<th style="vertical-align: text-top;">User Id</th>
+											<th style="vertical-align: text-top;">User Name</th>
+											<th style="vertical-align: text-top;">User Address</th>
+											<th style="vertical-align: text-top;">Mobile No</th>
+											<th style="vertical-align: text-top;">Registered on</th>
+											<th style="vertical-align: text-top;">Role</th>
+											<th style="vertical-align: text-top;">Is approved?</th>
+											<th style="vertical-align: text-top;">Is Active?</th>
 										</tr>
 									</thead>
-									<tbody>
-										<tr th:each="user : ${usersList}">
-											<td class="text-center" th:text="${user.userId}"></td>
-											<td sec:authorize="hasAuthority('ADMIN')" class="text-center"><a
-												th:href="@{/user/userProfile/} + ${user.userId}"
-												th:text="${user.firstName} + *{' '} + ${user.lastName}"></a></td>
-											<td sec:authorize="hasAuthority('MANAGER')"
-												class="text-center"
-												th:text="${user.firstName} + *{' '} + ${user.lastName}"></td>
-											<td class="text-center" th:text="${user.userAddress}"></td>
-											<td class="text-center" th:text="${user.mobileNo}"></td>
-											<td class="text-center"
-												th:text="${#strings.substring(user.registrationTime,0,16)}"></td>
-											<td sec:authorize="hasAuthority('ADMIN')" class="text-center"><a
-												th:href="@{/admin/manageRole/} + ${user.userId}"
-												th:text="${user.role.userRole}"></a></td>
-											<td sec:authorize="hasAuthority('MANAGER')"
-												class="text-center" th:text="${user.role.userRole}"></td>
-											<td class="text-center" th:if="${user.isApproved}"><span><a
-													class="btn btn-success btn-xs"
-													th:href="@{/user/userApproval/} + ${user.userId}"
-													onclick="return approveUser(this)" data-toggle="tooltip"
-													title="Change approval status">Approved</a></span></td>
-											<td class="text-center" th:unless="${user.isApproved}"><span><a
-													class="btn btn-danger btn-xs"
-													th:href="@{/user/userApproval/} + ${user.userId}"
-													onclick="return approveUser(this)" data-toggle="tooltip"
-													title="Change approval status">Disapproved</a></span></td>
-											<td class="text-center" th:if="${user.enabled}"><span><a
-													class="btn btn-success btn-xs"
-													th:href="@{/user/userEnable/} + ${user.userId}"
-													onclick="return enableUser(this)" data-toggle="tooltip"
-													title="Change active status">Active</a></span></td>
-											<td class="text-center" th:unless="${user.enabled}"><span><a
-													class="btn btn-danger btn-xs"
-													th:href="@{/user/userEnable/} + ${user.userId}"
-													onclick="return enableUser(this)" data-toggle="tooltip"
-													title="Change active status">Disabled</a></span></td>
-										</tr>
-									</tbody>
 								</table>
 							</div>
 
@@ -120,25 +85,87 @@
 	<div th:include="adminNav :: page-footer"></div>
 	<!-- JS Scripts-->
 	<!-- jQuery Js -->
-	<script th:src="@{/js/jquery-1.10.2.js}" type="text/javascript"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
 	<!-- Bootstrap Js -->
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
-	<!-- Morris Chart Js -->
-	<script th:src="@{/js/morris/raphael-2.1.0.min.js}"
-		type="text/javascript"></script>
-	<script th:src="@{/js/morris/morris.js}" type="text/javascript"></script>
+
 	<!-- DATA TABLE SCRIPTS -->
-	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
+	<script
+		th:src="@{https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/js/jquery.spring-friendly.js}"
+		type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
-	<script>
-		$(document).ready(function() {
-			$("#dataTables-example").dataTable();
+
+	<script type="text/javascript">
+		$('#tabledata').ready(function() {
+			var table = $('table#sample').DataTable({
+				'ajax' : '/data/userList',
+				'serverSide' : true,
+				columns : [ {
+					data : 'userId'
+				}, {
+					data : 'user',
+					render: function ( data, type, row, meta ) {
+						if($('#currentUserRole').val() == 'ADMIN'){
+							return '<a href="/user/userProfile/' + row.userId + '">'+row.firstName+" "+row.lastName+'</a>';
+						}
+						return row.firstName+" "+row.lastName;
+				    }
+				}, {
+					data : 'userAddress'
+				}, {
+					data : 'mobileNo'
+				}, {
+					data : 'registrationTime',
+					render: function ( data, type, row ) {
+				        if ( type === 'display' || type === 'filter' ) {
+				            var d = new Date( data );
+				            return d.getDate() +'-'+ (d.getMonth()+1) +'-'+ d.getFullYear() + " "+ d.getHours() + ":"+d.getMinutes();
+				        }
+				        return data;
+				    }
+				}, {
+					data : 'role.userRole',
+					render : function(data, type, row) {
+						if (row.role) {
+							if($('#currentUserRole').val() == 'ADMIN'){
+								return '<a href="/admin/manageRole/' + row.userId + '">'+row.role.userRole+'</a>';
+							} else {
+								return row.role.userRole;
+							}
+						}
+						return '';
+					}
+				}, {
+					data : 'isApproved',
+					render: function(data, type, row) {
+						if(row.isApproved){
+							return '<a class="btn btn-success btn-xs" href="/user/userApproval/'+row.userId+'" onclick="return approveUser(this)" data-toggle="tooltip"	title="Change approval status">Approved</a>';
+						} else {
+							return '<a class="btn btn-danger btn-xs" href="/user/userApproval/'+row.userId+'" onclick="return approveUser(this)" data-toggle="tooltip"	title="Change approval status">Disapproved</a>';
+						}
+					}
+				}, {
+					data : 'enabled',
+					render: function(data, type, row) {
+						if(row.enabled){
+							return '<a class="btn btn-success btn-xs" href="/user/userEnable/'+row.userId+'" onclick="return enableUser(this)" data-toggle="tooltip" title="Change active status">Active</a>';
+						} else {
+							return '<a class="btn btn-danger btn-xs" href="/user/userEnable/'+row.userId+'" onclick="return enableUser(this)" data-toggle="tooltip"	title="Change active status">Inactive</a>';
+						}
+					}
+				} ]
+			});
 		});
 	</script>
+
 	<!-- Custom Js -->
-	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
+		<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
