--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -38,9 +38,9 @@
 						<div class="panel panel-primary">
 							<div class="panel-heading">Bookings Details</div>
 							<div class="panel-body">
-								<div class="table-responsive">
+								<div class="table-responsive" id="bookingtable">
 									<table class="table table-striped table-bordered table-hover"
-										id="dataTables-example">
+										id="bookings">
 										<thead>
 											<tr>
 												<th>Booking Id</th>
@@ -54,27 +54,6 @@
 												<th>Bicycle No.</th>
 											</tr>
 										</thead>
-										<tbody>
-											<tr class="odd" th:each="booking : ${bookings}">
-												<td class="center"><span th:text="${booking.bookingId}"></span></td>
-												<td class="center"><span
-													th:text="${booking.user.userId}"></span></td>
-												<td class="center"><span
-													th:text="${booking.user.firstName}"></span></td>
-												<td class="center"><span
-													th:text="${#strings.substring(booking.bookingTime,0,16)}"></span></td>
-												<td class="center"><span
-													th:text="${booking.pickedUpFrom.location}"></span></td>
-												<td class="center"><span
-													th:text="${booking.returnedAt.location}"></span></td>
-												<td class="center"><span
-													th:text="${#strings.substring(booking.actualOut,0,16)}"></span></td>
-												<td class="center"><span
-													th:text="${#strings.substring(booking.actualIn,0,16)}"></span></td>
-												<td class="center"><span
-													th:text="${booking.biCycleId.chasisNo}"></span></td>
-											</tr>
-										</tbody>
 									</table>
 								</div>
 
@@ -148,11 +127,9 @@
 	<!-- DATA TABLE SCRIPTS -->
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
-	<script>
-		$(document).ready(function() {
-			$("#dataTables-example").dataTable();
-		});
-	</script>
+	<script th:src="@{/js/jquery.spring-friendly.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 </body>
