--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -39,8 +39,8 @@
 						<small sec:authorize="hasAuthority('ADMIN')">(You cannot
 							change your own role.)</small>
 					</h2>
-					<br />
-					<input id="currentUserRole" type="hidden" th:value="${#authentication.principal.role.userRole}" />
+					<br /> <input id="currentUserRole" type="hidden"
+						th:value="${#authentication.principal.role.userRole}" />
 				</div>
 			</div>
 			<div class="row">
@@ -54,9 +54,9 @@
 					<div class="panel panel-primary">
 						<div class="panel-heading">User Details</div>
 						<div class="panel-body">
-							<div class="table-responsive" id="tabledata">
+							<div class="table-responsive" id="usertable">
 								<table class="table table-striped table-bordered table-hover"
-									id="sample">
+									id="users">
 									<thead>
 										<tr>
 											<th style="vertical-align: text-top;">User Id</th>
@@ -87,85 +87,18 @@
 	<!-- jQuery Js -->
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
 	<!-- Bootstrap Js -->
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
-
 	<!-- DATA TABLE SCRIPTS -->
-	<script
-		th:src="@{https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js}"
-		type="text/javascript"></script>
+	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.spring-friendly.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
-
-	<script type="text/javascript">
-		$('#tabledata').ready(function() {
-			var table = $('table#sample').DataTable({
-				'ajax' : '/data/userList',
-				'serverSide' : true,
-				columns : [ {
-					data : 'userId'
-				}, {
-					data : 'user',
-					render: function ( data, type, row, meta ) {
-						if($('#currentUserRole').val() == 'ADMIN'){
-							return '<a href="/user/userProfile/' + row.userId + '">'+row.firstName+" "+row.lastName+'</a>';
-						}
-						return row.firstName+" "+row.lastName;
-				    }
-				}, {
-					data : 'userAddress'
-				}, {
-					data : 'mobileNo'
-				}, {
-					data : 'registrationTime',
-					render: function ( data, type, row ) {
-				        if ( type === 'display' || type === 'filter' ) {
-				            var d = new Date( data );
-				            return d.getDate() +'-'+ (d.getMonth()+1) +'-'+ d.getFullYear() + " "+ d.getHours() + ":"+d.getMinutes();
-				        }
-				        return data;
-				    }
-				}, {
-					data : 'role.userRole',
-					render : function(data, type, row) {
-						if (row.role) {
-							if($('#currentUserRole').val() == 'ADMIN'){
-								return '<a href="/admin/manageRole/' + row.userId + '">'+row.role.userRole+'</a>';
-							} else {
-								return row.role.userRole;
-							}
-						}
-						return '';
-					}
-				}, {
-					data : 'isApproved',
-					render: function(data, type, row) {
-						if(row.isApproved){
-							return '<a class="btn btn-success btn-xs" href="/user/userApproval/'+row.userId+'" onclick="return approveUser(this)" data-toggle="tooltip"	title="Change approval status">Approved</a>';
-						} else {
-							return '<a class="btn btn-danger btn-xs" href="/user/userApproval/'+row.userId+'" onclick="return approveUser(this)" data-toggle="tooltip"	title="Change approval status">Disapproved</a>';
-						}
-					}
-				}, {
-					data : 'enabled',
-					render: function(data, type, row) {
-						if(row.enabled){
-							return '<a class="btn btn-success btn-xs" href="/user/userEnable/'+row.userId+'" onclick="return enableUser(this)" data-toggle="tooltip" title="Change active status">Active</a>';
-						} else {
-							return '<a class="btn btn-danger btn-xs" href="/user/userEnable/'+row.userId+'" onclick="return enableUser(this)" data-toggle="tooltip"	title="Change active status">Inactive</a>';
-						}
-					}
-				} ]
-			});
-		});
-	</script>
-
+	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
-		<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
+	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
