--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -110,6 +110,7 @@
 							<span th:text="*{user.firstName}"></span>
 						</div>
 						<div class="profile-usertitle-job" th:text="${user.role.userRole}">[User_Role]</div>
+						<input id="userId" type="hidden" th:value = "${user.userId}"/>
 					</div>
 					<!-- END SIDEBAR USER TITLE -->
 					<!-- SIDEBAR MENU -->
@@ -143,37 +144,20 @@
 							<div class="panel panel-info">
 								<div class="panel-heading">Booking Details</div>
 								<div class="panel-body" style="background-color: white;">
-									<div class="table-responsive">
+									<div id="userBookings" class="table-responsive">
 										<table class="table table-striped table-bordered table-hover"
-											id="dataTables-example">
+											id="userBookingHistory">
 											<thead>
 												<tr class="tblFontSize">
 													<th class="text-center">Booking Id</th>
 													<th class="text-center">Booking Time</th>
-													<th class="text-center">Expected In Time</th>
-													<th class="text-center">Expected Out Time</th>
-													<th class="text-center">Actual In Time</th>
-													<th class="text-center">Actual Out Time</th>
+													<th class="text-center">Out Time</th>
+													<th class="text-center">In Time</th>
 													<th class="text-center">Picked Up From</th>
 													<th class="text-center">Returned At</th>
 													<th class="text-center">Fare</th>
 												</tr>
 											</thead>
-											<tbody class="tblFontSize">
-												<tr th:each="booking : ${bookingHistory}">
-													<td class="text-center" th:text="${booking.bookingId}"></td>
-													<td class="text-center" th:text="${booking.bookingTime}"></td>
-													<td class="text-center" th:text="${booking.expectedIn}"></td>
-													<td class="text-center" th:text="${booking.expectedOut}"></td>
-													<td class="text-center" th:text="${booking.actualIn}"></td>
-													<td class="text-center" th:text="${booking.actualOut}"></td>
-													<td class="text-center"
-														th:text="${booking.pickedUpFrom.location}"></td>
-													<td class="text-center"
-														th:text="${booking.returnedAt.location}"></td>
-													<td class="text-center" th:text="${booking.fare}"></td>
-												</tr>
-											</tbody>
 										</table>
 									</div>
 
@@ -207,12 +191,12 @@
 		</div>
 	</div>
 	<!-- DATA TABLE SCRIPTS -->
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
+	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
+	<script th:src="@{/js/jquery.spring-friendly.js}"
+		type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
-	<script>
-		$(document).ready(function() {
-			$("#dataTables-example").dataTable();
-		});
-	</script>
 </body>
 </html>
