--- a/src/main/resources/templates/approvedRequests.html
+++ b/src/main/resources/templates/approvedRequests.html
@@ -9,9 +9,6 @@
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
-<!-- Morris Chart Styles-->
-<link th:href="@{/js/morris/morris-0.4.3.min.css}" rel="stylesheet" />
-<link rel="stylesheet" th:href="@{http://www.w3schools.com/lib/w3.css}" />
 <!-- Google Fonts-->
 <link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
@@ -26,17 +23,7 @@
 		<div id="page-inner">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header">
-						User Details<br /> <small sec:authorize="hasAuthority('ADMIN')">(Click
-							on User's Name to view user profile or click on User's role to
-							change role)</small>
-					</h1>
-					<h2>
-						<small sec:authorize="hasAuthority('ADMIN')">(You cannot
-							change your own role.)</small>
-					</h2>
-					<br /> <input id="currentUserRole" type="hidden"
-						th:value="${#authentication.principal.role.userRole}" />
+					<h1 class="page-header">Approved Transfer Requests</h1>
 				</div>
 			</div>
 			<div class="row">
@@ -48,21 +35,19 @@
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<!-- Advanced Tables -->
 					<div class="panel panel-primary">
-						<div class="panel-heading">User Details</div>
+						<div class="panel-heading">Request Details</div>
 						<div class="panel-body">
-							<div class="table-responsive" id="usertable">
+							<div class="table-responsive" id="approvedRequestTable">
 								<table class="table table-striped table-bordered table-hover"
-									id="users">
+									id="approvedRequests">
 									<thead>
 										<tr>
-											<th>User Id</th>
-											<th>User Name</th>
-											<th>User Address</th>
-											<th>Mobile No</th>
-											<th>Registered on</th>
-											<th>Role</th>
-											<th>Is approved?</th>
-											<th>Is Active?</th>
+											<th>Request Id</th>
+											<th>Requested from</th>
+											<th>Manager</th>
+											<th>Requested on</th>
+											<th>Requested Quantity</th>
+											<th>Approved quantity</th>
 										</tr>
 									</thead>
 								</table>
@@ -92,7 +77,5 @@
 	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
-	<script th:src="@{/js/bootbox.min.js}" type="text/javascript"></script>
-	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
