--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</section>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row profile">
 			<div class="col-md-3">
 				<div class="profile-sidebar">
@@ -110,7 +110,7 @@
 							<span th:text="*{user.firstName}"></span>
 						</div>
 						<div class="profile-usertitle-job" th:text="${user.role.userRole}">[User_Role]</div>
-						<input id="userId" type="hidden" th:value = "${user.userId}"/>
+						<input id="userId" type="hidden" th:value="${user.userId}" />
 					</div>
 					<!-- END SIDEBAR USER TITLE -->
 					<!-- SIDEBAR MENU -->
@@ -119,7 +119,8 @@
 							<li><a th:href="@{/user/userProfile/} + ${user.userId}">
 									<i class="glyphicon glyphicon-home"></i> Overview
 							</a></li>
-							<li class="active"><a th:href="@{/user/updateUserDetails/} + ${user.userId}"> <i
+							<li class="active"><a
+								th:href="@{/user/updateUserDetails/} + ${user.userId}"> <i
 									class="fa fa-user fa-fw"></i> Edit Account
 							</a></li>
 							<li><a href="/user/changePassword"><i
@@ -137,39 +138,32 @@
 				</div>
 			</div>
 			<div class="col-md-9">
-				<div class="bookingHistoryDiv">
-					<div class="row">
-						<div class="col-sm-12">
-							<!-- Advanced Tables -->
-							<div class="panel panel-info">
-								<div class="panel-heading">Booking Details</div>
-								<div class="panel-body" style="background-color: white;">
-									<div id="userBookings" class="table-responsive">
-										<table class="table table-striped table-bordered table-hover"
-											id="userBookingHistory">
-											<thead>
-												<tr class="tblFontSize">
-													<th class="text-center">Booking Id</th>
-													<th class="text-center">Booking Time</th>
-													<th class="text-center">Out Time</th>
-													<th class="text-center">In Time</th>
-													<th class="text-center">Picked Up From</th>
-													<th class="text-center">Returned At</th>
-													<th class="text-center">Fare</th>
-												</tr>
-											</thead>
-										</table>
-									</div>
-
-								</div>
-							</div>
-							<!--End Advanced Tables -->
+				<!-- Advanced Tables -->
+				<div class="panel panel-info">
+					<div class="panel-heading">Booking Details</div>
+					<div class="panel-body" style="background-color: white;">
+						<div id="userClosedBookingHistory" class="table-responsive">
+							<table class="table table-striped table-bordered table-hover"
+								id="userBookingHistory">
+								<thead>
+									<tr>
+										<th class="text-center">Booking Id</th>
+										<th class="text-center">Booking Time</th>
+										<th class="text-center">Out Time</th>
+										<th class="text-center">In Time</th>
+										<th class="text-center">Picked Up From</th>
+										<th class="text-center">Returned At</th>
+										<th class="text-center">Fare</th>
+									</tr>
+								</thead>
+							</table>
 						</div>
 					</div>
-					<!-- /. ROW  -->
 				</div>
+				<!--End Advanced Tables -->
 			</div>
 		</div>
+		<!-- /. ROW  -->
 	</div>
 	<div style="height: 110px"></div>
 
