--- a/src/main/resources/templates/currentBooking.html
+++ b/src/main/resources/templates/currentBooking.html
@@ -7,12 +7,6 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- Template site title
    ================================================== -->
 <title>Bicycle Sharing</title>
@@ -24,7 +18,7 @@
 
 <!-- Bootstrap CSS
    ================================================== -->
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
+<link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 
 <!-- Font Icons
    ================================================== -->
@@ -146,7 +140,7 @@
 				<div class="profile-content">
 					<div class="row">
 						<div class="col-md-12">
-						<h4 class="text-danger" th:text="*{closeMessage}"></h4>
+							<h4 class="text-danger" th:text="*{closeMessage}"></h4>
 							<div class="row">
 								<div class="col-md-12">
 									<div class="row">
@@ -155,8 +149,7 @@
 												<div class="panel-heading">Current Booking</div>
 												<div class="panel-body" style="background-color: white;">
 													<div class="table-responsive">
-														<table
-															class="table table-striped table-bordered">
+														<table class="table table-striped table-bordered">
 															<thead>
 																<tr>
 																	<th>Booking Id</th>
@@ -167,8 +160,7 @@
 																</tr>
 															</thead>
 															<tbody>
-																<tr
-																	th:each="currentBooking : ${currentBooking}">
+																<tr th:each="currentBooking : ${currentBooking}">
 																	<td class="text-center"><span
 																		th:text="${currentBooking.bookingId}"></span></td>
 																	<td class="text-center"><span
@@ -218,5 +210,10 @@
 			</div>
 		</div>
 	</div>
+	<!-- Scripts -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<!-- Bootstrap Js -->
+	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 </body>
 </html>
