--- a/src/main/resources/templates/printIssueBicycleDetails.html
+++ b/src/main/resources/templates/printIssueBicycleDetails.html
@@ -8,9 +8,6 @@
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
-<!-- Morris Chart Styles-->
-<link th:href="@{/js/morris/morris-0.4.3.min.css}" rel="stylesheet" />
-<link rel="stylesheet" th:href="@{http://www.w3schools.com/lib/w3.css}" />
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
@@ -26,7 +23,8 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header text-success">Bicycle Successfully alloted..!!</h1>
+					<h1 class="page-header text-success">Bicycle Successfully
+						alloted..!!</h1>
 				</div>
 			</div>
 			<!-- /. ROW  -->
@@ -39,7 +37,7 @@
 						<div class="panel-body">
 							<div class="col-sm-12">
 								<div class="col-sm-1"></div>
-								<div class="col-sm-11" id ="printId">
+								<div class="col-sm-11" id="printId">
 									<div class="row">
 										<div class="col-sm-12">
 											<div class="col-sm-6">
@@ -76,7 +74,7 @@
 												<label>Actual Out Time:</label>
 											</div>
 											<div class="col-sm-6">
-											<span th:text="${bookingDetails.actualOut}"></span>
+												<span th:text="${bookingDetails.actualOut}"></span>
 											</div>
 										</div>
 									</div>
@@ -86,7 +84,7 @@
 												<label>Expected Return Time:</label>
 											</div>
 											<div class="col-sm-6">
-											<span th:text="${bookingDetails.expectedIn}"></span>
+												<span th:text="${bookingDetails.expectedIn}"></span>
 											</div>
 										</div>
 									</div>
@@ -96,7 +94,7 @@
 												<label>Picked Up From:</label>
 											</div>
 											<div class="col-sm-6">
-											<span th:text="${bookingDetails.pickedUpFrom.location}"></span>
+												<span th:text="${bookingDetails.pickedUpFrom.location}"></span>
 											</div>
 										</div>
 									</div>
@@ -105,7 +103,8 @@
 						</div>
 						<div class="panel-footer">
 							<div style="padding: 5px" class="text-center">
-								<input type="submit" class="btn btn-primary" value="PRINT" onclick="print();"/>
+								<input type="submit" class="btn btn-primary" value="PRINT"
+									onclick="print();" />
 							</div>
 						</div>
 					</div>
@@ -124,14 +123,18 @@
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
-	<script>  function print(){
-	 var prtContent = document.getElementById("printId");
-	 var WinPrint = window.open('', '', 'left=0,top=0,width=800,height=900,toolbar=0,scrollbars=0,status=0');
-	 WinPrint.document.write(prtContent.innerHTML);
-	 WinPrint.document.close();
-	 WinPrint.focus();
-	 WinPrint.print();
-	 WinPrint.close();}
+	<script>
+		function print() {
+			var prtContent = document.getElementById("printId");
+			var WinPrint = window
+					.open('', '',
+							'left=0,top=0,width=800,height=900,toolbar=0,scrollbars=0,status=0');
+			WinPrint.document.write(prtContent.innerHTML);
+			WinPrint.document.close();
+			WinPrint.focus();
+			WinPrint.print();
+			WinPrint.close();
+		}
 	</script>
 </body>
 </html>
