--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -9,16 +9,15 @@
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
-<!-- Morris Chart Styles-->
-<link th:href="@{/js/morris/morris-0.4.3.min.css}" rel="stylesheet" />
-<link rel="stylesheet" th:href="@{http://www.w3schools.com/lib/w3.css}" />
-<!-- Google Fonts-->
-<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
-	rel="stylesheet" type="text/css" />
 <!-- TABLE STYLES-->
 <link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
+<!-- Google Fonts-->
+<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+	rel="stylesheet" type="text/css" />
+<style type="text/css">
+</style>
 </head>
 <body>
 	<div th:include="adminNav :: head-and-side"></div>
@@ -51,7 +50,8 @@
 						<div class="panel-heading">User Details</div>
 						<div class="panel-body">
 							<div class="table-responsive" id="usertable">
-								<table class="table table-striped table-bordered table-hover"
+								<table
+									class="table table-striped table-bordered table-hover responsive"
 									id="users">
 									<thead>
 										<tr>
@@ -85,11 +85,11 @@
 	<!-- Metis Menu Js -->
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
 	<!-- DATA TABLE SCRIPTS -->
+	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.spring-friendly.js}"
 		type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
-	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 	<script th:src="@{/js/bootbox.min.js}" type="text/javascript"></script>
