--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -7,12 +7,6 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- Template site title
    ================================================== -->
 <title>Bicycle Sharing</title>
@@ -24,7 +18,7 @@
 
 <!-- Bootstrap CSS
    ================================================== -->
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
+<link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 
 <!-- Font Icons
    ================================================== -->
@@ -95,7 +89,7 @@
 			</div>
 		</div>
 	</section>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row profile">
 			<div class="col-md-3">
 				<div class="profile-sidebar">
@@ -186,7 +180,9 @@
 	</div>
 	<!-- DATA TABLE SCRIPTS -->
 	<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<!-- Bootstrap Js -->
+	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.spring-friendly.js}"
