--- a/src/main/resources/templates/walletTransaction.html
+++ b/src/main/resources/templates/walletTransaction.html
@@ -7,12 +7,6 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- Template site title
    ================================================== -->
 <title>Bicycle Sharing</title>
@@ -24,7 +18,7 @@
 
 <!-- Bootstrap CSS
    ================================================== -->
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
+<link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 
 <!-- Font Icons
    ================================================== -->
@@ -124,7 +118,8 @@
 								th:href="@{/admin/adminHome}"><i class="fa fa-home"></i>Home<br />
 							</a></li>
 							<li class="divider"></li>
-							<li class="active"><a th:href="@{/user/userProfile/} + ${wallet.user.userId}"> <i
+							<li class="active"><a
+								th:href="@{/user/userProfile/} + ${wallet.user.userId}"> <i
 									class="glyphicon glyphicon-home"></i> Overview
 							</a></li>
 							<li><a
@@ -136,7 +131,8 @@
 								th:href="@{/user/bookingHistory/} + ${wallet.user.userId}">
 									<i class="fa fa-history"></i> Booking History
 							</a></li>
-							<li><a th:href="@{/user/currentBooking/} + ${wallet.user.userId}">
+							<li><a
+								th:href="@{/user/currentBooking/} + ${wallet.user.userId}">
 									<i class="fa fa-history"></i> Current Booking
 							</a></li>
 						</ul>
@@ -232,6 +228,9 @@
 		</div>
 	</div>
 	<!-- DATA TABLE SCRIPTS -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
 	<script>
